added loading a bidder's facebook profile

--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -119,6 +119,9 @@
                             <outlet property="delegate" destination="HW3-U9-p9y" id="R7P-vb-1FE"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="h5a-zN-D7g" kind="show" identifier="WebFacebookSegue" id="mql-bJ-aAN"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZF7-Zj-wdU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -758,10 +761,10 @@
             </objects>
             <point key="canvasLocation" x="972" y="894"/>
         </scene>
-        <!--View Controller-->
+        <!--Web Facebook View Controller-->
         <scene sceneID="h2w-4R-XcJ">
             <objects>
-                <viewController id="h5a-zN-D7g" sceneMemberID="viewController">
+                <viewController restorationIdentifier="webFacebook" storyboardIdentifier="webFacebook" id="h5a-zN-D7g" customClass="WebFacebookViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Iib-2q-YgI"/>
                         <viewControllerLayoutGuide type="bottom" id="KdD-Ps-vXF"/>
@@ -777,10 +780,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="webViewFacebook" destination="lze-TR-X6K" id="YHE-8R-pZN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WmV-wa-4ZE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-793" y="-539"/>
+            <point key="canvasLocation" x="4001" y="-525"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="AcW-z2-piR">
