--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -318,15 +318,6 @@
                                     <action selector="logoutClicked:" destination="vee-Lx-VDm" eventType="touchUpInside" id="XV9-PO-Lzh"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ku-Yw-MY7">
-                                <rect key="frame" x="29" y="419" width="64" height="30"/>
-                                <state key="normal" title="Add offer">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="1zm-Wi-V1Z" kind="show" id="4Ar-Ct-1Gh"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone No." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rj3-DR-Lie">
                                 <rect key="frame" x="161" y="182" width="301" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -361,9 +352,7 @@
                             <constraint firstItem="SxT-FF-ZNO" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="32" id="6G2-7k-gXI"/>
                             <constraint firstItem="crw-Ba-hwH" firstAttribute="trailing" secondItem="OJO-PU-qK1" secondAttribute="trailing" id="CWu-1m-AZa"/>
                             <constraint firstItem="OJO-PU-qK1" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="44" id="Ff6-d2-kuj"/>
-                            <constraint firstItem="1Ku-Yw-MY7" firstAttribute="top" secondItem="cAe-N9-tr0" secondAttribute="bottom" constant="14" id="Hor-lx-fGh"/>
                             <constraint firstItem="kGc-SP-0Py" firstAttribute="top" secondItem="jr7-Nt-bY1" secondAttribute="bottom" constant="8" symbolic="YES" id="Lge-MK-oYS"/>
-                            <constraint firstItem="1Ku-Yw-MY7" firstAttribute="leading" secondItem="cAe-N9-tr0" secondAttribute="leading" id="PSX-hD-cqP"/>
                             <constraint firstItem="vIC-dG-ivV" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="197" id="Sla-98-LOQ"/>
                             <constraint firstItem="cAe-N9-tr0" firstAttribute="top" secondItem="kGc-SP-0Py" secondAttribute="bottom" constant="8" symbolic="YES" id="VgL-AI-wu1"/>
                             <constraint firstItem="kGc-SP-0Py" firstAttribute="leading" secondItem="cAe-N9-tr0" secondAttribute="leading" id="XZ2-GO-URo"/>
@@ -618,7 +607,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aLx-fq-ygR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1708" y="894"/>
+            <point key="canvasLocation" x="1985" y="878"/>
         </scene>
         <!--Home Table View Controller-->
         <scene sceneID="5Qq-ku-0fM">
@@ -635,11 +624,12 @@
                     </tableView>
                     <connections>
                         <segue destination="mN7-F8-50y" kind="show" identifier="showOfferDetails" id="U3Z-Qr-C2t"/>
+                        <segue destination="1zm-Wi-V1Z" kind="show" identifier="ToAddOffer" id="9Vc-RW-yXX"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lyB-To-GLd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1981" y="156"/>
+            <point key="canvasLocation" x="1985" y="156"/>
         </scene>
         <!--Rejected-->
         <scene sceneID="cvD-dp-4fz">
@@ -672,7 +662,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hxj-YI-f3P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1653" y="1645"/>
+            <point key="canvasLocation" x="1985" y="1645"/>
         </scene>
         <!--Pending-->
         <scene sceneID="257-7J-cV6">
@@ -704,7 +694,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZo-RO-m26" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="972" y="1645"/>
+            <point key="canvasLocation" x="1308" y="1645"/>
         </scene>
         <!--Approved-->
         <scene sceneID="aQ6-KK-gMW">
@@ -736,7 +726,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Du6-UP-GJ6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="278" y="1645"/>
+            <point key="canvasLocation" x="634" y="1645"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="gAv-OO-Fvc">
@@ -756,7 +746,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c7C-Bu-JS3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="972" y="894"/>
+            <point key="canvasLocation" x="1308" y="878"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="h2w-4R-XcJ">
